--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
 <body>
     <header>
+        <div class="text-center">  
+            <img src="../assets/img/logo.png" alt="Logo de SUBLIWEB" class="logo mb-3">  
+</div>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">SUBLI.WEB</a>
@@ -31,13 +34,13 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                         <li class="nav-item">
-                            <a class="nav-link" href="./views/Contactos.html">CONTACTOS</a>
+                            <a class="nav-link" href="./views/contactos.html">CONTACTOS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./views/dondeestamos.html">DONDE ESTAMOS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./views/Productos.html">PRODUCTOS</a>
+                            <a class="nav-link" href="./views/productos.html">PRODUCTOS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./views/servicios.html">SERVICIOS</a>
@@ -63,8 +66,8 @@
                         <div class="card">
                             <img src="./img/296dd65bfabb92337fd6462996e07e3e.jpg" class="card-img-top" alt="Imagen 1">
                             <div class="card-body">
-                                <h5 class="card-title">Título 1</h5>
-                                <p class="card-text">Descripción breve del contenido relacionado con la imagen 1.</p>
+                                <h5 class="card-title">BOX Pasion</h5>
+                                <p class="card-text">Incluye taza - Libreta - Chop- Pad</p>
                                 <a href="./views/productos.html" class="btn btn-primary">Ver Más</a>
                             </div>
                         </div>
@@ -73,9 +76,9 @@
                         <div class="card">
                             <img src="./img/camisetas-tazas.jpg" class="card-img-top" alt="Imagen 2">
                             <div class="card-body">
-                                <h5 class="card-title">Título 2</h5>
-                                <p class="card-text">Descripción breve del contenido relacionado con la imagen 2.</p>
-                                <a href="#" class="btn btn-primary">Ver Más</a>
+                                <h5 class="card-title">BOX Clasico</h5>
+                                <p class="card-text">Remera - Tazas.</p>
+                                <a href="./views/productos.html" class="btn btn-primary">Ver Más</a>
                             </div>
                         </div>
                     </div>
@@ -83,8 +86,8 @@
                         <div class="card">
                             <img src="./img/08c579b7cd7e8c9e7daf533f62292bec.jpg" alt="Imagen 3">
                             <div class="card-body">
-                                <h5 class="card-title">Título 3</h5>
-                                <p class="card-text">Descripción breve del contenido relacionado con la imagen 3.</p>
+                                <h5 class="card-title">BOX Feliz Dia</h5>
+                                <p class="card-text"> Remeras- Tazas.</p>
                                 <a href="./views/productos.html" class="btn btn-primary">Ver Más</a>
                             </div>
                         </div>
@@ -97,7 +100,7 @@
                             <img src="./img/set.jpg" class="card-img-top" alt="Imagen 4">
                             <div class="card-body">
                                 <h5 class="card-title">Set de Jardin</h5>
-                                <p class="card-text">Descripción breve del contenido relacionado con la imagen 4.</p>
+                                <p class="card-text">Tazas - Set de jardin.</p>
                                 <a href="./views/productos.html" class="btn btn-primary">Ver Más</a>
                             </div>
                         </div>
@@ -107,8 +110,8 @@
                             <img src="./img/combo.jpg" class="card-img-top" alt="Imagen 5">
                             <div class="card-body">
                                 <h5 class="card-title">Dia del Profe</h5>
-                                <p class="card-text">Descripción breve del contenido relacionado con la imagen 5.</p>
-                                <a href="#" class="btn btn-primary">Ver Más</a>
+                                <p class="card-text">Taza - Botella- Bolsa- Cartuchera-Monedero.</p>
+                                <a href="./views/productos.html" class="btn btn-primary">Ver Más</a>
                             </div>
                         </div>
                     </div>
@@ -116,9 +119,9 @@
                         <div class="card">
                             <img src="./img/descarga.jpg" class="card-img-top" alt="Imagen 6">
                             <div class="card-body">
-                                <h5 class="card-title">Título 6</h5>
-                                <p class="card-text">Descripción breve del contenido relacionado con la imagen 6.</p>
-                                <a href="#" class="btn btn-primary">Ver Más</a>
+                                <h5 class="card-title">BOX San Valentin</h5>
+                                <p class="card-text">Remeras en pareja - tazas</p>
+                                <a href="./views/productos.html" class="btn btn-primary">Ver Más</a>
                             </div>
                         </div>
                     </div>
@@ -132,27 +135,22 @@
         <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="2" aria-label="Slide 3"></button>  
     </div>  
 
-    <div class="carousel-inner">  
+    <div class="carousel-inner"><a href="./views/productos.html"></a> 
         <div class="carousel-item active">  
-            <img src="./img/2-slide-1734622531127-727171442-76c755ca03c92609818ce4100654d3c61734622534-1920-1920.webp" class="d-block w-100 img-fluid" alt="Imagen de un paisaje hermoso 1">  
+            <img src="./img/2-slide-1734622531127-727171442-76c755ca03c92609818ce4100654d3c61734622534-1920-1920.webp" class="d-block w-100 img-fluid" alt="Taza Plastica" >  
             <div class="carousel-caption d-none d-md-block">  
-                <h5>Título de la Imagen 1</h5>  
-                <p>Descripción de la imagen 1.</p>  
+            
             </div>  
         </div>  
         <div class="carousel-item">  
-            <img src="./img/2-slide-1734622531126-111441455-2bb02690abeed9348efc2cbe80e16e981734622533-1920-1920.webp" class="d-block w-100 img-fluid" alt="Imagen de un paisaje hermoso 2">  
+            <img src="./img/2-slide-1734622531126-111441455-2bb02690abeed9348efc2cbe80e16e981734622533-1920-1920.webp" class="d-block w-100 img-fluid" alt="Botella">  
             <div class="carousel-caption d-none d-md-block">  
-                <h5>Título de la Imagen 2</h5>  
-                <p>Descripción de la imagen 2.</p>  
+
             </div>  
         </div>  
         <div class="carousel-item">  
-            <img src="./img/2-slide-1734622531126-8967635138-8b179552f39f972b30841b0afd1bcdac1734622531-1920-1920.webp" class="d-block w-100 img-fluid" alt="Imagen de un paisaje hermoso 3">  
-            <div class="carousel-caption d-none d-md-block">  
-                <h5>Título de la Imagen 3</h5>  
-                <p>Descripción de la imagen 3.</p>  
-            </div>  
+            <img src="./img/2-slide-1734622531126-8967635138-8b179552f39f972b30841b0afd1bcdac1734622531-1920-1920.webp" class="d-block w-100 img-fluid" alt="Set de Jardin">  
+            <div class="carousel-caption d-none d-md-block"> </div>  
         </div>  
     </div>  
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
