--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="shadow-sm py-3" style="background: linear-gradient(to right, #90caf9, #64b5f6);">
         <div class="text-center">  
             <img src="./img/logo.png" alt="Logo SUBLI.WEB" class="img-fluid" style="max-width: 150px;">
             
