--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <header class="shadow-sm ">
     <div class="navbar navbar-expand-lg navbar-light container">
-        <img src="../img/logo.png" alt="Logo de SUBLIWEB" class="logo mb-2">
+        <img src="./img/logo.png" alt="Logo de SUBLIWEB" class="logo mb-2">
       </div>
       <nav class="navbar navbar-expand-lg navbar-light container">
         <a class="navbar-brand text-white fw-bold" href="#">SUBLI.WEB</a>
